DBJR-122: set fixed size of follow-up preview image so the follow-up thumbnails are always aligned

--- a/www/less/components/thumbnails.less
+++ b/www/less/components/thumbnails.less
@@ -117,13 +117,16 @@
 		text-align: left;
 		.box-shadow(none);
 
-		img {
-			margin-bottom: .5em;
-		}
-
 		form {
 			margin-bottom: 0;
 		}
+
+        &-image {
+            width: 128px;
+            height: 180px;
+            overflow: hidden;
+			margin-bottom: .5em;
+        }
 
 		&-title {
 			min-height: 6 * 1.35em; // 6 lines of text
